# MandelbrotGL

./: .gitmodules  LICENSE  README.md
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/io/github/mh321productions/mandelbrot/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/assets/shader/: Fragment.shader  Vertex.shader
Android/app/src/main/cpp/: CMakeLists.txt  mandelbrot.cpp
Android/app/src/main/java/io/github/mh321productions/mandelbrot/: ImageCreator.java  MainActivity.java  MandelbrotControls.java  MandelbrotRenderer.java  MandelbrotView.java  MyFileProvider.java  SaveFragment.java
Android/app/src/main/res/drawable/: ic_flag_en.xml  ic_flag_fr.xml  ic_options_icon.xml  ic_reset_icon.xml  ic_save_icon.xml
Android/app/src/main/res/layout/: activity_main.xml  fragment_save.xml
Android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android/app/src/main/res/values-de-rDE/: strings.xml
Android/app/src/main/res/values-fr-rFR/: strings.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/main/res/xml/: files_path.xml
Android/app/src/test/java/io/github/mh321productions/mandelbrot/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
PC/: .gitignore  CMakeLists.txt
PC/include/: Images.hpp  ShaderCode.hpp
PC/res/image/Icon/: Icon.xcf
PC/res/shader/: Mandelbrot.shader  Overlay.shader
PC/src/: Main.cpp
PC/src/2D/: Color.cpp  Font.cpp  Font.hpp  FontManager.cpp  Geometry.cpp  Geometry.hpp  Renderer.cpp  Renderer.hpp  String32.cpp  Unicode.hpp
PC/src/App/: App.cpp  App.hpp  CleanupHandler.cpp  EventLoopHandler.cpp  InitHandler.cpp  RenderHandler.cpp
PC/src/Buffer/: Buffer.cpp  Buffer.hpp  BufferLoader.cpp
PC/src/Extra/: CMakeLists.txt  FontHexDump.cpp  ImageHexDump.cpp  ResourceCompiler.cpp  Resources.hpp  ShaderReader.cpp  Start.sh
PC/src/Shader/: Shader.cpp  Shader.hpp  ShaderLoader.cpp
PC/src/Texture/: Texture.cpp  Texture.hpp  TextureLoader.cpp  TextureManager.cpp
PC/src/UI/: Button.cpp  CheckButton.cpp  Overlay.cpp  Overlay.hpp  RadioButton.cpp  UIEvents.cpp  UIEvents.hpp  Widget.hpp
PC/src/Window/: Window.cpp  Window.hpp
